--- a/src/styles/scss/_buttons.scss
+++ b/src/styles/scss/_buttons.scss
@@ -30,6 +30,9 @@ button {
 	&:hover {
 		background-color: $green-vdark;
 	}
+	&:disabled {
+		background-color: $grey;
+	}
 }
 
 .button-edit, .button-cancel {
@@ -37,6 +40,7 @@ button {
 	&:hover {
 		background-color: $orange-vdark;
 	}
+
 }
 .button-delete {
 	background-color: $red-dark;
